--- a/QuanLyHocSinh/templates/Administrator/base.html
+++ b/QuanLyHocSinh/templates/Administrator/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>{% block title %}Trang chính{% endblock %}</title>
+    <link rel = "icon" href="{{ url_for('static', filename='images/logo.png') }}">
     {% block css %}
     <!-- CSS tại đây -->
     {% endblock %}
