--- a/QuanLyHocSinh/templates/index.html
+++ b/QuanLyHocSinh/templates/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Administrator/Login.css')}}">
+    <link rel = "icon" href="{{ url_for('static', filename='images/logo.png') }}">
     <!-- Liên kết đến file CSS tùy chỉnh -->
-    <title>Trang Đăng Nhập</title>
+    <title>Đăng Nhập</title>
 </head>
 <body>
 <div class="container">
