--- a/QuanLyHocSinh/templates/Teacher/EnterPoints.html
+++ b/QuanLyHocSinh/templates/Teacher/EnterPoints.html
@@ -102,10 +102,10 @@ Nhập điểm
                     </td>
                     <td class="table-cell">{{ s.name }}</td>
                     <td class="table-cell score-15min-container">
-                        <input type="number" class="input-cell" name="scores_15min[]" placeholder="Điểm 15’" min="0" max="10">
+                        <input type="number" class="input-cell scores_15min[]" name="scores_15min[]" placeholder="Điểm 15’" min="0" max="10">
                     </td>
                     <td class="table-cell test-container">
-                        <input type="number" class="input-cell" name="scores_test[]" placeholder="Điểm 1 tiết" min="0" max="10">
+                        <input type="number" class="input-cell scores_test[]" name="scores_test[]" placeholder="Điểm 1 tiết" min="0" max="10">
                     </td>
                     <td class="table-cell">
                         <input type="number" class="input-cell" name="scores_exam[]" placeholder="Điểm thi" min="0" max="10">
