--- a/QuanLyHocSinh/templates/Administrator/edit_subject.html
+++ b/QuanLyHocSinh/templates/Administrator/edit_subject.html
@@ -19,6 +19,14 @@ Chỉnh sửa môn học
             <input type="text" id="subject_name" name="subject_name" class="form-control"
                    value="{{ subject.subjectName }}" required autocomplete="off">
         </div>
+        <div class="mb-3">
+            <label for="subject_requirement" class="form-label">Yêu cầu môn học</label><br>
+            <textarea id="subject_requirement" name="subject_requirement" rows="7" placeholder="Yêu cầu môn học...">{% if subject.subjectRequirement %}{{subject.subjectRequirement}}{% else %}{{""}}{% endif %}</textarea><br><br>
+        </div>
+        <div class="mb-3">
+            <label for="subject_description" class="form-label">Mô tả môn học</label><br>
+            <textarea id="subject_description" name="subject_description" rows="10" placeholder="Nhập mô tả tại đây...">{% if subject.subjectDescription %}{{subject.subjectDescription}}{% else %}{{""}}{% endif %}</textarea><br><br>
+        </div>
         <button type="submit" class="btn btn-primary">Cập nhật</button>
     </form>
 </div>
