--- a/QuanLyHocSinh/templates/Teacher/GenerateTranscript.html
+++ b/QuanLyHocSinh/templates/Teacher/GenerateTranscript.html
@@ -10,7 +10,7 @@ Nhập điểm
 
 {% block content %}
 <div class="container mt-4 container-div">
-    <h2 class="text-center">Nhập điểm cho môn {{subject_name}}</h2>
+    <h2 class="text-center">Xuất điểm cho môn {{subject_name}}</h2>
 
     <!-- Bộ lọc -->
     <form action="{{ url_for('generate') }}" method="POST">
