--- a/QuanLyHocSinh/static/css/Teacher/EnterPoints.css
+++ b/QuanLyHocSinh/static/css/Teacher/EnterPoints.css
@@ -149,3 +149,7 @@
     cursor: pointer; /* Trỏ chuột */
     transition: background-color 0.3s ease; /* Hiệu ứng hover */
 }
+
+.container{
+    margin-bottom: 5rem !important;
+}
