--- a/QuanLyHocSinh/templates/Administrator/forgot_password.html
+++ b/QuanLyHocSinh/templates/Administrator/forgot_password.html
@@ -6,6 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Đặt Lại Mật Khẩu</title>
 </head>
+<style>
+    button:hover{
+        background-color:#1d1d24 !important;
+    }
+</style>
 <body>
 <div class="container">
     <div class="row justify-content-center">
@@ -14,7 +19,7 @@
             <!-- Bước 1: Nhập Tên Đăng Nhập -->
             <form class="mt-5 p-4 border rounded shadow" action="{{ url_for('forgot_password', step=1) }}"
                   method="POST">
-                <h2 class="text-center">Đặt Lại Mật Khẩu</h2>
+                <h2 class="text-center" style="color:#31313b;">Đặt Lại Mật Khẩu</h2>
                 {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                 <div class="container mt-3">
@@ -31,7 +36,7 @@
                            name="username" required autocomplete="off">
                     <label for="username">Tên đăng nhập</label>
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Lấy lại mật khẩu</button>
+                <button type="submit" class="btn btn-primary w-100" style="background-color:#31313b; border:none;">Lấy lại mật khẩu</button>
             </form>
 
             {% elif step == 2 %}
@@ -55,7 +60,7 @@
                            name="verification_code" required autocomplete="off">
                     <label for="verification_code">Mã xác nhận</label>
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Xác nhận</button>
+                <button type="submit" class="btn btn-primary w-100" style="background-color:#31313b; border:none;">Xác nhận</button>
             </form>
 
             {% elif step == 3 %}
@@ -86,11 +91,11 @@
                     <label for="confirm_password">Xác nhận mật khẩu</label>
                 </div>
 
-                <button type="submit" class="btn btn-primary w-100">Đặt lại mật khẩu</button>
+                <button type="submit" class="btn btn-primary w-100" style="background-color:#31313b; border:none;">Đặt lại mật khẩu</button>
 
                 <!-- Nút chuyển về trang đăng nhập -->
                 <div class="text-center mt-3">
-                    <a href="/login" class="text-decoration-none">Quay lại trang đăng nhập</a>
+                    <a href="/" class="text-decoration-none" style="color:#31313b;">Quay lại trang đăng nhập</a>
                 </div>
             </form>
             {% endif %}
