--- a/QuanLyHocSinh/templates/Teacher/EnterPoints.html
+++ b/QuanLyHocSinh/templates/Teacher/EnterPoints.html
@@ -31,7 +31,7 @@ Nhập điểm
                     <strong>Lớp:</strong>
                     <input type="text" id="class-input" name="class-input" class="input-field"
                            placeholder="Nhập lớp (vd: 10A1)"
-                           list="class-list">
+                           list="class-list" autocomplete="off">
                     <datalist id="class-list">
                         <option value="10A">
                         <option value="10B">
@@ -45,7 +45,7 @@ Nhập điểm
                     <strong>Học kỳ:</strong>
                     <input type="text" id="semester-input" name="semester-input" class="input-field"
                            placeholder="Nhập học kỳ (vd: 1, 2)"
-                           list="semester-list">
+                           list="semester-list" autocomplete="off">
                     <datalist id="semester-list">
                         <option value="Học kỳ 1"></option>
                         <option value="Học kỳ 2"></option>
@@ -56,7 +56,7 @@ Nhập điểm
                 <p>
                     <strong>Năm học:</strong>
                     <input type="text" id="academic-year-input" name="academic-year-input" class="input-field"
-                           placeholder="Nhập năm học (vd: 2024-2025)" list="academic-year-list">
+                           placeholder="Nhập năm học (vd: 2024-2025)" list="academic-year-list" autocomplete="off">
                     <datalist id="academic-year-list">
                         <option value="2022-2023">
                         <option value="2023-2024">
