--- a/QuanLyHocSinh/templates/index.html
+++ b/QuanLyHocSinh/templates/index.html
@@ -9,12 +9,21 @@
     <!-- Liên kết đến file CSS tùy chỉnh -->
     <title>Đăng Nhập</title>
 </head>
+
+<style>
+    button:hover{
+        background-color:#1d1d24 !important;
+    }
+    a:hover{
+        color:#1d1d24 !important;
+    }
+</style>
 <body>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6 login-div">
             <form class="mt-5 p-4 border rounded shadow" action="/" method="POST">
-                <h2 class="text-center">Đăng Nhập</h2>
+                <h2 class="text-center" style="color:#31313b;">Đăng Nhập</h2>
                 {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                 <div class="container mt-3">
@@ -29,19 +38,19 @@
                 <div class="form-floating mb-3 mt-3">
                     <input type="text" class="form-control" id="username" placeholder="Nhập tên tài khoản"
                            name="username" required autocomplete="off">
-                    <label for="username">Tên đăng nhập</label>
+                    <label for="username" style="color:#31313b;">Tên đăng nhập</label>
                 </div>
 
                 <div class="form-floating mt-3 mb-3">
                     <input type="password" class="form-control" id="password" placeholder="Nhập mật khẩu"
                            name="password" required autocomplete="off">
-                    <label for="password">Mật khẩu</label>
+                    <label for="password" style="color:#31313b;">Mật khẩu</label>
                 </div>
 
-                <button type="submit" class="btn btn-primary w-100">Đăng Nhập</button>
+                <button type="submit" class="btn btn-primary w-100" style="background-color:#31313b;">Đăng Nhập</button>
                 <!-- Dòng "Quên mật khẩu?" -->
                 <div class="text-center mt-3">
-                    <a href="{{ url_for('forgot_password', step=1) }}" class="text-decoration-none">Quên mật khẩu?</a>
+                    <a href="{{ url_for('forgot_password', step=1) }}" class="text-decoration-none" style="color:#31313b;">Quên mật khẩu?</a>
                 </div>
             </form>
         </div>
