--- a/QuanLyHocSinh/templates/Teacher/base.html
+++ b/QuanLyHocSinh/templates/Teacher/base.html
@@ -31,7 +31,7 @@
                 </ul>
                   <!-- Chuyển Đăng xuất qua phải -->
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"> Xin chào, {{current_user.name}}</li>
+                    <li class="nav-item nav-link" id="user_name"> Xin chào, <a href="{{url_for('info_user_teacher')}}">{{current_user.name}}</a></li>
                     <li class="nav-item">
                         <a class="nav-link logout-btn" href="{{url_for('logout')}}">Đăng xuất</a>
                     </li>
