--- a/QuanLyHocSinh/static/css/Teacher/EnterPoints.css
+++ b/QuanLyHocSinh/static/css/Teacher/EnterPoints.css
@@ -51,7 +51,7 @@
     min-width: 150px; / Đảm bảo độ rộng tối thiểu của mỗi ô /
     font-size: 1.2rem; /* Tăng kích cỡ chữ */
     border-spacing: 0; /* Khoảng cách giữa các ô */
-    margin: 0 auto; /* Canh giữa bảng */
+    margin: 3rem auto; /* Canh giữa bảng */
 
 }
 
@@ -148,4 +148,7 @@
     font-size: 14px; /* Cỡ chữ */
     cursor: pointer; /* Trỏ chuột */
     transition: background-color 0.3s ease; /* Hiệu ứng hover */
+}
+#user_name{
+    color: white;
 }
