--- a/QuanLyHocSinh/templates/Teacher/EnterPoints.html
+++ b/QuanLyHocSinh/templates/Teacher/EnterPoints.html
@@ -31,7 +31,7 @@ Nhập điểm
                     <strong>Lớp:</strong>
                     <input type="text" id="class-input" name="class-input" class="input-field"
                            placeholder="Nhập lớp (vd: 10A1)"
-                           list="class-list">
+                           list="class-list" required>
                     <datalist id="class-list">
                         <option value="10A">
                         <option value="10B">
@@ -45,7 +45,7 @@ Nhập điểm
                     <strong>Học kỳ:</strong>
                     <input type="text" id="semester-input" name="semester-input" class="input-field"
                            placeholder="Nhập học kỳ (vd: 1, 2)"
-                           list="semester-list">
+                           list="semester-list" required>
                     <datalist id="semester-list">
                         <option value="Học kỳ 1"></option>
                         <option value="Học kỳ 2"></option>
@@ -56,7 +56,7 @@ Nhập điểm
                 <p>
                     <strong>Năm học:</strong>
                     <input type="text" id="academic-year-input" name="academic-year-input" class="input-field"
-                           placeholder="Nhập năm học (vd: 2024-2025)" list="academic-year-list">
+                           placeholder="Nhập năm học (vd: 2024-2025)" list="academic-year-list" required>
                     <datalist id="academic-year-list">
                         <option value="2022-2023">
                         <option value="2023-2024">
@@ -69,5 +69,13 @@ Nhập điểm
 
 </div>
 
-<script src="{{ url_for('static', filename='js/Teacher/EnterPoints.js') }}"></script>
+<script src="{{ url_for('static', filename='js/Teacher/EnterPoints.js') }}">
+    setTimeout(function() {
+    var flashMessages = document.getElementById('flash-messages');
+    if (flashMessages) {
+      flashMessages.style.display = 'none';
+    }
+  }, 5000);  // Thời gian là 5 giây
+
+</script>
 {% endblock %}
