update restrict role

--- a/QuanLyHocSinh/templates/staff/ClassList.html
+++ b/QuanLyHocSinh/templates/staff/ClassList.html
@@ -16,76 +16,85 @@
 
 {% block content %}
 {% with messages = get_flashed_messages(with_categories=True) %}
-    {% if messages %}
-        <div id="flash-messages">
-            {% for category, message in messages %}
-                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            {% endfor %}
-        </div>
-    {% endif %}
+{% if messages %}
+<div id="flash-messages">
+    {% for category, message in messages %}
+    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
 {% endwith %}
 <!-- Tìm kiếm và reset -->
 <div class="search-container">
     <form method="POST" action="{{ url_for('class_edit') }}">
         <label for="class">Lớp:</label>
         <select id="class" name="class">
-            <option value="none">Chưa Có Lớp Học</option>
+            <option value="none" {% if not selected_class %}selected{% endif %}>Chưa Chọn Lớp Học</option>
             {% for classes in class_list %}
-                <option value="{{ classes.id }}">{{ classes.className }}</option>
+            <option value="{{ classes.id }}"
+                    {% if selected_class and selected_class.id== classes.id %}selected{% endif %}>
+                {{ classes.className }}
+            </option>
             {% endfor %}
         </select>
         <label for="semester">Học Kỳ:</label>
         <select id="semester" name="semester">
-            <option value="none">Chưa Có Học Kỳ</option>
+            <option value="none" {% if not selected_semester %}selected{% endif %}>Chưa Chọn Học Kỳ</option>
             {% for semesters in semester_list %}
-                <option value="{{ semesters.id }}">{{ semesters.semesterName }} ({{semesters.year}})</option>
+            <option value="{{ semesters.id }}"
+                    {% if selected_semester and selected_semester.id== semesters.id %}selected{% endif %}>
+                {{ semesters.semesterName }} ({{semesters.year}})
+            </option>
             {% endfor %}
         </select>
-        <label for="student-name">Tên:</label>
+        <label for="searchStudent">Tên:</label>
         <input type="text" id="searchStudent" name="searchStudent" placeholder="Nhập tên học sinh">
         <button type="submit" id="searchBtn" class="btn btn-primary">Tìm kiếm</button>
-        <button type="reset" id="resetBtn" class="btn btn-secondary"><a href="{{ url_for('class_edit') }}">Reset</a></button>
+        <button type="reset" id="resetBtn" class="btn btn-secondary"><a href="{{ url_for('class_edit') }}">Reset</a>
+        </button>
     </form>
 </div>
 
 <div id="main">
     <table id="tour-table" class="table table-striped">
         <thead>
-            <tr>
-                <th>STT</th>
-                <th>Họ và tên</th>
-                <th>Giới tính</th>
-                <th>Năm sinh</th>
-                <th>Địa chỉ</th>
-                <th>Hành Động</th>
-            </tr>
+        <tr>
+            <th>STT</th>
+            <th>Họ và tên</th>
+            <th>Giới tính</th>
+            <th>Năm sinh</th>
+            <th>Địa chỉ</th>
+            <th>Hành Động</th>
+        </tr>
         </thead>
         <tbody id="tour-data">
-            {% for student in students %}
-                <tr>
-                    <td>{{ loop.index }}</td>
-                    <td>{{ student.name }}</td>
-                    <td>{{ student.gender }}</td>
-                    <td>{{ student.DOB.strftime('%d/%m/%Y') if student.DOB else '' }}</td>
-                    <td>{{ student.address }}</td>
-                    <td>
-                        <!-- Nút để mở modal chỉnh sửa học sinh -->
-                        <a class="edit-btn btn btn-primary"
-                        href="{{ url_for('student_class_info', student_id=student.id, class_id=class_id, semester_id=semester_id) }}">
-                            Sửa
-                        </a>
-                        <form action="{{ url_for('student_delete_class') }}" method="POST" style="display:inline;">
-                            <input type="hidden" name="student_id" value="{{ student.id }}">
-                            <input type="hidden" name="class_id" value="{{ class_id }}">
-                            <input type="hidden" name="semester_id" value="{{ semester_id }}">
-                            <button type="submit" class="delete-btn btn btn-danger" onclick="return confirm('Bạn có chắc chắn muốn xóa học sinh này?');">Xóa</button>
-                        </form>
-                    </td>
-                </tr>
-            {% endfor %}
+        {% for student in students %}
+        <tr>
+            <td>{{ loop.index }}</td>
+            <td>{{ student.name }}</td>
+            <td>{{ student.gender }}</td>
+            <td>{{ student.DOB.strftime('%d/%m/%Y') if student.DOB else '' }}</td>
+            <td>{{ student.address }}</td>
+            <td>
+                <!-- Nút để mở modal chỉnh sửa học sinh -->
+                <a class="edit-btn btn btn-primary"
+                   href="{{ url_for('student_class_info', student_id=student.id, class_id=class_id, semester_id=semester_id) }}">
+                    Sửa
+                </a>
+                <form action="{{ url_for('student_delete_class') }}" method="POST" style="display:inline;">
+                    <input type="hidden" name="student_id" value="{{ student.id }}">
+                    <input type="hidden" name="class_id" value="{{ class_id }}">
+                    <input type="hidden" name="semester_id" value="{{ semester_id }}">
+                    <button type="submit" class="delete-btn btn btn-danger"
+                            onclick="return confirm('Bạn có chắc chắn muốn xóa học sinh này?');">Xóa
+                    </button>
+                </form>
+            </td>
+        </tr>
+        {% endfor %}
         </tbody>
     </table>
 </div>
