--- a/QuanLyHocSinh/templates/staff/InfoUser.html
+++ b/QuanLyHocSinh/templates/staff/InfoUser.html
@@ -12,7 +12,7 @@
     <div class="container">
      <div class="sidebar">
         <a href="{{ url_for('info_user') }}">Thông Tin Cá Nhân</a>
-        <a href="{{ url_for('staff') }}"><i class="fa-solid fa-backward"></i><span>Trang chính</span></a>
+        <a href="{{ url_for('staff') }}"><i class="fa-solid fa-backward"></i><span> Trang Chính</span></a>
     </div>
 
     <div class="content" id="personalInfo">
