--- a/QuanLyHocSinh/static/css/staff/Student-manage.css
+++ b/QuanLyHocSinh/static/css/staff/Student-manage.css
@@ -76,7 +76,9 @@ body {
     align-items: center;
     margin-left: 20px;
 }
-
+.sub_head_div h1{
+    color:#fff
+}
 .offcanvas-body a {
     color: #676464;
     text-decoration: none;
